--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 :root{
     --color-blue: #0084FD;
     --color-light-blue: #B5DDFF;
+    --color-grey: #5A6E7F;
     --color-purple: #9792E4;
     --padding-20: 20px;
     --margin-30: 30px 0
@@ -54,7 +55,7 @@ main > section{
     width: calc(100% - 20px);
     margin-left: 10px;
     margin-right: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     border-radius: 20px;
 }
 
@@ -79,7 +80,10 @@ a{
     background-color: var(--color-blue);
     color: white;
     display: inline-block;
-    width: 50%;
+    width: 70%;
+    letter-spacing: 3px;
+    text-decoration: none;
+    margin-bottom: 30px;
 }
 
 
@@ -118,13 +122,20 @@ header{
 
 /* MAIN */
 
+
+/* FIRST SECTION */
+
+main > section{
+    margin-bottom: 30px;
+}
+
 #first-section .my-col{
     background-color: var(--color-light-blue);
 }
 
-#first-section .my-col-66 .my-col-50:first-child{
-    padding: 0 var(--padding-20) ;
-}
+/* #first-section .my-col-66 .my-col-50:first-child{
+    padding-left: var(--padding-20) ;
+} */
 
 #first-section .my-col-66 .my-col-50 img{
     width: 60%;
@@ -132,17 +143,95 @@ header{
 }
 
 #first-section .my-col-66 .my-col-50:first-child > *{
-    margin: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 20px;
+    line-height: 2em;
 }
 
-#first-section .my-col-66 .my-col-50:last-child{
-    display: flex;
-    align-items: flex-end;
+#first-section .my-col-33{
+    text-align:center;
+    /* padding: 20px */
 }
 
-#first-section h2{
+#first-section .my-col > *{
+    margin-left: 20px;
+    margin-right: 20px;
+    line-height: 2em;
+}
+
+
+#first-section h2, #first-section .my-col > i{
     color: var(--color-blue);
+    margin-bottom: 20px;
 }
+
+#first-section .my-col > i{
+    font-size: 4em;
+}
+
+#first-section p{
+    color: var(--color-grey);
+    font-weight: bold;
+    padding-bottom: 20px;
+}
+
+/* SECOND SECTION */
+
+#second-section img{
+    width: 100%;
+}
+
+#second-section .my-col:first-child img{
+    padding-top: 5rem;
+}
+
+#second-section p{
+    line-height: 2em;
+}
+
+#second-section .my-col:first-child{
+    color: white;
+}
+
+#second-section .my-col:first-child h2{
+    margin-top: 40px;
+    margin-bottom: 40px;
+    font-size: 2em;
+}
+
+#second-section .my-col:first-child p{
+    margin-bottom: 20px;
+}
+
+#second-section .my-col:last-child div{
+    background-color: white;
+    border-radius: 50px;
+    padding: 30px;
+    text-align: center;
+}
+
+#second-section .my-col:last-child h3{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+#second-section .my-col:last-child p{
+    margin-bottom: 20px;
+    font-style: italic;
+}  
+
+#second-section .my-col:last-child i{
+    margin-bottom: 20px;
+    background-color: var(--color-purple);
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    line-height: 50px;
+    font-size: 1.5em;
+}
+
+
 /* MEDIA QUERY */
 
 /* Tablet */
@@ -155,6 +244,20 @@ header{
     #first-section .my-col-33{
         width: calc((100% / 3) - 20px);
     }
+
+    #second-section .my-row{
+        justify-content: space-around;
+    }
+
+   #second-section .my-row .my-col-50:first-child{
+    padding-top: 10rem;
+   }
+
+   /* #second-section .my-col:last-child{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+} */
 
     /* #first-section .my-col-50{
         width: 50%
@@ -185,8 +288,18 @@ header{
         display:none;
     }
 
-    #first-section .my-row .my-col:first-child{
+    #first-section .my-col-66{
         display: flex;
+        align-items: flex-end;
+    }
+
+    #first-section .my-row .my-col-50{
+        width: calc((100% / 2) - 40px)
+    }
+
+    #first-section .my-col-66 .my-col-50 img{
+        width: 90%;
+        margin-left: 0px;
     }
 
     #second-section .my-col-50{
@@ -212,9 +325,6 @@ header{
     border: 1px dashed black;
 }
 
-.my-row{
-    border: 2px dashed blue;
-}
 
 .about-us{
     border: 2px dashed lightcoral;
