--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,25 @@ a{
     margin-bottom: 30px;
 }
 
+.button.more{
+    background-color: var(--color-purple);
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 15px 0;
+    display: inline-block;
+    width: 60%;
+    margin-bottom: 20px;
+    letter-spacing: 3px;
+}
+
+.button.linkedin{
+    letter-spacing: 0;
+    word-spacing: 2px;
+    font-weight: 100;
+    width: 85%;
+}
+
 
 /* HEADER */
 
@@ -163,7 +182,6 @@ main > section{
 
 #first-section h2, #first-section .my-col > i{
     color: var(--color-blue);
-    margin-bottom: 20px;
 }
 
 #first-section .my-col > i{
@@ -231,7 +249,185 @@ main > section{
     font-size: 1.5em;
 }
 
+/* TERZA SECTION */
 
+
+
+.testimonials-header > *{
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.testimonials-header h3{
+    color: var(--color-purple);
+    font-size: 2em;
+}
+
+.testimonials-header p{
+    line-height: 30px;
+}
+
+.testimonials-card{
+    text-align: center;
+    color: white;
+    padding: 20px;
+    border-radius: 30px;
+    margin-bottom: 20px;
+}
+
+.testimonials-img{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+    overflow: hidden;
+    display: flex;
+    flex-shrink: 0;
+    margin: 0 auto;
+}
+
+
+
+.testimonials-img img{
+    width: 100%;
+}
+
+.testimonials-text{
+    padding: 20px 0;
+    line-height: 40px;
+}
+
+.testimonials-text span{
+    font-weight: bold;
+}
+
+#third-section .testimonials-card{
+    background-color: var(--color-purple);
+}
+
+/* FOUR SECTION */
+
+#four-section{
+    background-color: var(--color-purple);
+}
+
+#four-section h2:first-of-type{
+    color: white;
+    padding: 30px 0;
+    font-size: 2.2em;
+    text-align: center;
+}
+
+#four-section .my-col{
+    background-color: white;
+    padding: 30px;
+}
+
+#four-section .my-col h2{
+    color: var(--color-purple);
+    text-align: left;
+    font-size: 4em;
+}
+
+#four-section .my-col h3{
+    color: var(--color-purple);
+    font-size: 1.8em;
+    margin-bottom: 20px;
+}
+
+#four-section .my-col p{
+    color: gray;
+    line-height: 30px;
+    margin-bottom: 20px;
+}
+
+/* FIVE SECTION */
+
+#five-section .my-row > *{
+    padding: 0 20px;
+}
+
+#five-section h2{
+    color: var(--color-purple);
+    font-size: 2em;
+    padding: 20px 0;
+}
+
+#five-section p{
+    line-height: 40px;
+}
+
+#five-section .my-col-40 .about-img-container{
+    width: 200px;
+    height: 200px;
+    position: relative;
+}
+
+#five-section .my-col-40 .about-img-container img{
+    width: 100%;
+    border-radius: 50%;
+    margin: 20px 0;
+}
+
+#five-section .my-col-40 .about-img-container i{
+    color: var(--color-purple);
+    font-size: 4em;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+#five-section .my-col-40 h3{
+    color: var(--color-purple);
+    line-height: 30px;
+    font-size: 2em;
+    padding: 50px 0;
+    
+}
+
+/* SIX SECTION */
+
+#six-section{
+    background-color: var(--color-purple);
+    text-align: center;
+}
+
+#six-section .container > *{
+    padding-bottom: 40px;
+    color: white;
+
+}
+
+#six-section h3{
+    font-size: 2em;
+}
+
+#six-section .container h2{
+    font-size: 3em;
+    color: #FDC15F;
+}
+
+#six-section .container p{
+    line-height: 30px;
+}
+
+#six-section .container p:last-child{
+    padding-top: 40px;
+}
+
+#six-section .container p:last-child i{
+    font-size: 0.5em;
+    
+}
+
+
+#six-section a.button{
+    padding: 15px 50px;
+    color: var(--color-purple);
+    text-decoration: none;
+    font-weight: bold;
+    letter-spacing: 3px;
+}
 /* MEDIA QUERY */
 
 /* Tablet */
@@ -267,12 +463,27 @@ main > section{
         width: calc((100% / 2) - 20px);
     }
 
-    #five-section .my-col-80{
-        width: calc(80% - 20px);
+    #five-section .my-col-60{
+        width: calc(60% - 20px);
     }
 
-    #five-section .my-col-20{
-        width: calc(20% - 20px);
+    #five-section .my-col-40{
+        width: calc(40% - 20px);
+    }
+
+    .testimonials-card{
+        display: flex;
+        text-align: left;
+        
+        
+    }
+
+    .testimonials-text{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding-left: 30px;
+        
     }
 
 }
@@ -310,22 +521,4 @@ main > section{
     #four-section .my-row .my-col-33{
         width: calc((100% / 3) - 20px);
     }
-
-    
-
-}
-
-.testimonials-card{
-    min-height: 50px;
-    border: 1px dashed black;
-}
-
-.whit-us-card{
-    min-height: 50px;
-    border: 1px dashed black;
-}
-
-
-.about-us{
-    border: 2px dashed lightcoral;
 }
